<resources>
    <string name="app_name">Login Demo</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login">Login</string>
    <string name="basic_login">Basic Login</string>
    <string name="full_login">Full Login</string>
    <string name="passwordless_login">Passwordless Login</string>
    <string name="login_failed_message">Fake login failed.  Try using test / test.</string>
</resources>
